# spirit

./: .gitignore  .gitmodules  404.html  CMakeLists.txt  README.md  conanfile.py  default.spirit  docker_build.sh  index.html  install.sh  resources.qrc  sitemap.xml  spirit.pro  update.sh
.github/workflows/: deploy.yml  gh-pages.yml
artwork/: README.md  logo.xcf  logo_package.xcf  round-logo.xcf
assets/css/: styles.3fb12cc2.css  styles.b93f5484.css
assets/js/: 01a85c17.49be800d.js  01a85c17.7b2a414e.js  0c040055.d70f1ee5.js  0db446b9.f55f8c81.js  0e1e4be3.56241d43.js  0e1e4be3.6b691c54.js  0e1e4be3.828afd88.js  12158960.f0e6301f.js  14eb3368.87fc5000.js  14eb3368.a8d62bc7.js  17896441.7f9dedb8.js  1be78505.12c8d040.js  1be78505.9908ddeb.js  1df93b7f.2037ddc7.js  1df93b7f.6075a8d0.js  1df93b7f.abbe9f3f.js  1df93b7f.e35353c7.js  1df93b7f.f1650985.js  1f391b9e.cd507e0b.js  210.56d0b6a6.js  210.fffacfd8.js  2125fcba.0496440d.js  2125fcba.76444b65.js  2125fcba.ff1e9271.js  2529.dcfdcf9c.js  2529.eb7fb833.js  25a918a3.6a943657.js  269fa8ba.70d21e36.js  269fa8ba.d77c29a3.js  269fa8ba.f0f58aa0.js  305aa1f0.58d18164.js  305aa1f0.8a18ee81.js  305aa1f0.98cb4d3c.js  30cceb0a.4b3e9325.js  30cceb0a.632b9212.js  30cceb0a.7b1383d9.js  393be207.93679bf1.js  393be207.fe5e32b0.js  45e2065a.33d44aa6.js  45e2065a.6e23ae93.js  (+77 more)
blog/: atom.xml  index.html  rss.xml
blog/archive/: index.html
blog/tags/: index.html
blog/tags/gnome/: index.html
blog/tags/hello/: index.html
blog/tags/hola/: index.html
blog/tags/wayland/: index.html
blog/wayland/: index.html
blog/welcome/: index.html
build_resources/: Daemon-Info.plist  Dockerfile  Info.plist  build_qt_static.sh  copy_kf5.sh  dmg-spec.json  spirit.desktop
docs/Introduction/: index.html
docs/category/spirit-file/: index.html
docs/category/spirit-rest-api/: index.html
docs/category/usage/: index.html
docs/programs/: index.html
docs/rest-api/address/: index.html
docs/rest-api/api/: index.html
docs/spirit-files/download/: index.html
docs/spirit-files/edition2021/: index.html
docs/spirit-files/intro/: index.html
docs/usage/CLI/: index.html
docs/usage/loading/: index.html
docs/usage/quirks/: index.html
docs/usage/settings/: index.html
include/: activewindowtracker.hpp  activewindowtracker_p.hpp  activewindowtrackerenums.hpp  bashrcwriter.hpp  debug_p.hpp  guiapp.hpp  helpers_p.hpp  macos_p.h  spirit.hpp  spiritapp.hpp  spiritconfig.hpp  spiritdaemon.hpp  spiritdaemon_p.hpp  spiritenums.hpp  spiritfile.hpp  spiritmanager.hpp  spiritsettings.hpp  spiritworker.hpp  spiritworker_p.hpp  termcolor.hpp  windowinfo.hpp  windowinfo_p.hpp  windowquirks.hpp  xdo_wrapper.hpp
include/ui/: spiritgui.ui  spiritquirks.ui  spiritsettings.ui
markdown-page/: index.html
qtinstaller/config/: config.xml
release_notes/: v0.1.0.md  v0.1.1.md  v0.1.2.md  v0.2.0.md  v0.2.1.md
scripts/: .gitignore  build_in_docker.sh  check.py  get-v0.1.2.sh  write-links.py
snap/: snapcraft.yaml
src/: activewindowtracker.cc  activewindowtracker_p.cc  bashrcwriter.cc  guiapp.cc  helpers_p.cc  macos_p.m  main.cc  spirit.cc  spiritapp.cc  spiritconfig.cc  spiritdaemon.cc  spiritdaemon_p.cc  spiritfile.cc  spiritmanager.cc  spiritsettings.cc  spiritworker.cc  spiritworker_p.cc  windowinfo.cc  windowinfo_p.cc  windowquirks.cc
ui/: spiritgui.ui  spiritquirks.ui  spiritsettings.ui
website/: docusaurus.config.js  package-lock.json  package.json
website/blog/: 2022-10-09-welcome.md  2022-10-14-wayland.md  authors.yml
website/docs/: Introduction.md  programs.md
website/docs/rest-api/: _category_.json  address.md  api.md
website/docs/spirit-files/: _category_.json  download.md  edition2021.md  edition2022.md  intro.md
website/docs/usage/: CLI.md  _category_.json  loading.md  quirks.md  settings.md
website/src/components/HomepageDownloads/: index.tsx  styles.module.css
website/src/components/HomepageFeatures/: index.tsx
website/src/components/HomepageSpiritFiles/: index.tsx
website/src/css/: custom.css
website/src/pages/: index.module.css  index.tsx
